# pythonProject_Ecommerce

./: .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_product_py.html
src/: __init__.py  base.py  base_product.py  category.py  exceptions.py  mixins.py  order.py  product.py  utils.py
tests/: test_category.py  test_exceptions.py  test_order.py  test_product.py  test_utils.py
