[project]
name = "pythonproject-ecommerce"
version = "0.1.0"
description = ""
authors = [
    {name = "viktor bezuglov",email = "bezza8418@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.0,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.14"
requests = "^2.32.5"
python-dotenv = "^1.2.1"
pandas = "^3.0.1"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^7.0.0"  # Используем версию 7.x, чтобы соответствовать вашим требованиям
flake8 = "^7.3.0"
mypy = "^1.19.1"
black = "^26.1.0"
isort = "^7.0.0"
types-requests = "^2.32.4"
pandas-stubs = "^3.0.0.260204"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
